The same thing we do every night, Pinky - try to take over the world! happy monday _ bleh _ (C) whatthecommit.com